# MEDIC-plus

./: .gitignore  README.md  config.py  eval.py  main.py  pyproject.toml
.devcontainer/: devcontainer.json
data_list/: split_kfold.py
dataloader/: dataloader.py  dataset.py
model/: model.py
train/: ml.py  select.py
util/: iterator.py
