[project]
name = "medic-plus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.2.0",
    "gdown>=5.2.0",
    "ipykernel>=7.0.1",
    "kagglehub>=0.3.13",
    "timm>=1.0.20",
    "torchvision>=0.24.0",
    "wandb>=0.22.2",
    "wilds>=2.0.0",
]
